[project]
name = "rs3-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catppuccin-jupyterlab>=0.2.4",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "ipywidgets>=8.1.5",
    "mss>=10.0.0",
    "notebook>=7.3.3",
    "opencv-python>=4.11.0.86",
    "python-xlib>=0.33",
]
